Fix btjs with alt_entry labels in LLInt https://bugs.webkit.org/show_bug.cgi?id=280513 rdar://136829865

Reviewed by Justin Michaud.

Now that we have all our alt_entry labels `lldb` has a hard time
figuring out that we're in LLInt code, thus btjs doesn't end up
calling `CallFrame::describeFrame`. This patch uses jsc_llint_begin
and a new jsc_llint_end labels to determine we're in LLInt now,
which should be more robust.

* Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:
* Tools/lldb/lldb_webkit.py:
(btjs):

Canonical link: https://commits.webkit.org/284361@main